Update FileApplication.java